Fixes group add form not showing

--- a/apps/user/admin/css/user.css
+++ b/apps/user/admin/css/user.css
@@ -40,13 +40,6 @@
 }
 
 /**
- * Groups listing
- */
-#groups-list .group-form {
-	display: none;
-}
-
-/**
  * Group diff
  */
 #group-diff .listing-wrapper {
